# soc-detection-lab-honeypot

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
dashboard/: README.md  pyproject.toml
dashboard/docs/: ENGINEERING_NARRATIVE.md  PHASE_10_LOG.md  PHASE_11_LOG.md  PHASE_1_LOG.md  PHASE_2_LOG.md  PHASE_3_LOG.md  PHASE_4_LOG.md  PHASE_5_LOG.md  PHASE_6_LOG.md  PHASE_7_LOG.md  PHASE_8_5_LOG.md  PHASE_8_LOG.md  PROJECT_PLAN.md  RESUME_HERE.md
dashboard/docs/adr/: 001-data-schema.md  002-log-shipping.md  003-single-table-design.md  004-frontend-stack.md  005-password-filtering.md  007-cloudflare-waf-over-aws-waf.md  009-captured-malware-policy.md  010-fluent-bit-edge-shippers.md  011-cicd-permission-boundary.md
dashboard/docs/runbooks/: edge-credential-rotation.md  terraform-bootstrap.md
dashboard/edge/: install_droplet.sh  install_pi.sh
dashboard/edge/haproxy/: haproxy.cfg.snippet
dashboard/frontend-apex/: index.html  preview.webm
dashboard/functions/aggregator/: handler.py
dashboard/functions/api/: handler.py
dashboard/functions/ingest/: handler.py
dashboard/functions/shared/: aggregate_dto.py  api_dto.py  cowrie_schema.py  ddb_helpers.py  event_dto.py  geoip.py  haproxy_parser.py  password_classifier.py  technique_classifier.py
dashboard/infrastructure/terraform/: README.md
dashboard/scripts/: deploy_frontend.sh  humanize_comments.py  package_lambdas.py  package_lambdas.sh
dashboard/tests/backend/: conftest.py  test_aggregator_handler.py  test_aggregator_helpers.py  test_api_dto.py  test_api_handler.py  test_api_parallel.py  test_cowrie_schema.py  test_ddb_helpers.py  test_event_dto.py  test_generator.py  test_generator_aws_paths.py  test_generator_determinism.py  test_geoip.py  test_haproxy_parser.py  test_ingest_handler.py  test_ingest_helpers.py  test_ingest_malformed_event.py  test_password_classifier.py  test_real_fixture_round_trip.py  test_technique_classifier.py
dashboard/tools/: synthetic_data_generator.py
dashboard/tools/data/: asn_pools.json  passwords.txt  usernames.txt
dashboard/web/: .env.development  .eslintrc.cjs  .gitignore  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+134 files in other folders)
